js/js.translator/testData/incremental/invalidation/jsModuleAnnotationOnObjectWithUsage/third-party-lib.mjs
export function getResult() {
    return "OK"
}